# LiveTraffic

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CRUISE_FIX_SUMMARY.md  DockerCommands.txt  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  LiveTraffic.aps  LiveTraffic.rc  LiveTraffic.sln  LiveTraffic.vcxproj  LiveTraffic.vcxproj.filters  MAC_COMPILATION_REPORT.md  Makefile  README.md  minimal_test  minimal_test.cpp  resource.h  test_compile.cpp  test_cruise_fix  test_cruise_fix.cpp  test_enum.cpp  test_mac_compilation.sh  test_parked_fix.cpp  validate_mac_compilation  validate_mac_compilation.cpp
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/build-lin/: README.md  action.yml
.github/actions/build-mac/: README.md  action.yml
.github/actions/build-win/: action.yml  build-win.cmd
.github/actions/sign-notarize/: README.md  action.yml  sign-notarize
.github/actions/upload-plugin/: README.md  action.yml
.github/workflows/: build.yml
Cfg/: FlightModels.prf
Data/ADSB/Historical/: ADSB Historical Data
Data/ADSB/REST/: ADSBExchange.json  ADSBExchange_20180402_1955_UTC.json  ADSBExchange_v1.json  ADSBExchange_v2.json
Data/ADSB/TCP Feed/: adsbexchange32001 1x.json  adsbexchange32001 3x.json  adsbexchange32001_1x_pretty.json
Data/ADSB/adsb.fi/: adsb.fi.json
Data/ADSBHub/: ADSBHub_SBS_Sample.csv  ADSBHub_Test.py  ADSBHub_VRS_Sample.txt  Dump.xlsx
Data/AutoATC/AutoATC.sjson/: 770408410.428292  data  metaData
Data/AviationWeather/METAR.sjson/: 747604614.297283  747604784.031099  data  metaData
Data/FSCharter/: FSC-get-flights.txt  Request Option Radius.json  Request Option Rectangle.json  Response.json
Data/Flightradar24/: Flightradar 24.txt  clickhandler_original.json  clickhandler_pretty.json  feed_list.xlsx  feed_original.json  feed_pretty.json
Data/ForeFlight/: ForeFlight_Sim.py
Data/OGN/: APRS_Test.py  OGN.txt  OGN_model_typecode.txt  ddb.glidernet.org.txt
Data/OpenSky/: OpenSky API.js  OpenSky_20180420_1955_UTC.json  OpenSky_504_GatewayTimeout.html  OpenSky_ACProfile.html  OpenSky_MetadataAircraft.json  OpenSky_Metadata_Routes_combined.json  OpenSky_Routes.json  doc8643AircraftTypes.csv
Data/RealTraffic/: KJFK_20190305_2028Z_METAR.json  KJFK_20190305_2028Z_PE.txt  KJFK_20190305_2130Z.txt  KLAS  KLAS_20190305_2055Z_METAR.json  KLAS_20190305_2055Z_PE.txt  KLAS_20190305_2056Z.txt  KLAX_20200617_2152.csv  KLAX_20200624_2220Z.csv  KLAX_20210125_Test.csv  KPTK_20201128.csv  MMMX.txt  MMMX_1.txt  OMDB_20190224_1915Z.txt  OMDB_20190224_1915Z_PE.txt  RTAPI_example.py  RTTFC_Template.xlsx  SendTraffic.py  Weather.xls  edkb_10s.csv  edkb_10s.xlsx  edkb_landing.csv  edkb_landing_no_rwy_pos.csv  startRT  udp_listen.py  udp_send.py
Data/RealTraffic/RT_API.sjson/: 725578599.580375  725717638.083122  729379088.21102  729379133.463946  742250820.106701  742250820.107324  742250820.109163  742254202.945561  742555946.884103  742607783.227589  744147965.110025  744148065.431184  744148113.273644  746213911.74435  746214863.95976  746312457.328537  746828180.600688  data  metaData
Data/SayIntentions/: SI_Tracker_Map.json
Include/: ACInfoWnd.h  ACTable.h  Constants.h  CoordCalc.h  DataRefs.h  InfoListWnd.h  LTADSBEx.h  LTADSBHub.h  LTAircraft.h  LTApt.h  LTAutoATC.h  LTChannel.h  LTFSCharter.h  LTFlightData.h  LTForeFlight.h  LTImgWindow.h  LTOpenGlider.h  LTOpenSky.h  LTRealTraffic.h  LTSayIntentions.h  LTSynthetic.h  LTWeather.h  LiveTraffic.h  Network.h  SettingsUI.h  TFWidgets.h  TextIO.h  ThreadCrashHdl.h  XPCompatibility.h  parson.h
Lib/CURL/: CURL_WinBuildNotes.txt  MacOSX-Framework64Lib  libcurl.lib  libcurl_a.lib  zlibstatic.lib
Lib/CURL/libcurl.framework/: Headers  Resources  libcurl
Lib/ImGui/: imconfig.h  imgui.cpp  imgui.h  imgui_draw.cpp  imgui_internal.h  imgui_widgets.cpp  imstb_truetype.h
Lib/ImgWindow/: COPYING.md  ImgFontAtlas.cpp  ImgFontAtlas.h  ImgWindow.cpp  ImgWindow.h
Lib/LTAPI/: LTAPI.h
Lib/OpenGL/: SystemGL.h
Lib/OpenGL/GL/: glext.h
Lib/XPMP2/XPMP2.framework/: XPMP2
Lib/base64/: base64.c
Lib/fmod/: libfmod.dylib
Lib/fmod/inc/: FMOD_Logo.inc
Lib/fmod/logo/: FMOD_Logo.cpp
Lib/libpng/: libpng64.lib
Lib/portable-file-dialogs/: Github.webloc  portable-file-dialogs.h
Lib/xplanemp/: XPMPMultiplayer.h  XPMPPlaneRenderer.h
Lib/xplanemp/xplanemp.framework/: xplanemp
Lib/zlib/: zlib.lib
LiveTraffic.xcodeproj/: project.pbxproj
Resources/: Doc8643.txt  FlightModels.prf  RestoreOrig.py  SendTraffic.py  model_typecode.txt  related.txt
Resources/CSL/: PlaceCSLPackagesHere.html
SDK/: README.txt
SDK/CHeaders/XPLM/: XPLMDefs.h  (+3 more)
Src/: ACInfoWnd.cpp  ACTable.cpp  CMakeLists.txt  CoordCalc.cpp  DataRefs.cpp  InfoListWnd.cpp  LTADSBEx.cpp  LTADSBHub.cpp  LTAircraft.cpp  LTApt.cpp  LTAutoATC.cpp  LTChannel.cpp  LTFSCharter.cpp  LTFlightData.cpp  LTForeFlight.cpp  LTImgWindow.cpp  LTMain.cpp  LTOpenGlider.cpp  LTOpenSky.cpp  LTRealTraffic.cpp  LTSayIntentions.cpp  LTSynthetic.cpp  LTVersion.cpp  LTWeather.cpp  LiveTraffic.cpp  Network.cpp  SettingsUI - TFWidgets.cpp  SettingsUI.cpp  TFWidgets.cpp  TextIO.cpp  ThreadCrashHdl.cpp  XPCompatibility.cpp  parson.c  resource.h
Src/Include/: ACInfoWnd.h  Constants.h  CoordCalc.h  DataRefs.h  LTAircraft.h  LTChannel.h  LTFlightData.h  LiveTraffic.h  TFWidgets.h  TextIO.h
Src/xplanemp/: XPCAircraft.h
docker/: .gitignore  DockerCommands.txt  Dockerfile  Dockerfile_full  Makefile  Toolchain-mingw-w64-x86-64.cmake  Toolchain-msvc-x86-64.cmake  Toolchain-ubuntu-osxcross.cmake  build.sh
docker_1904/: Dockerfile  Makefile
docs/: Acceleration.psd  Apt.md  Calc.xlsx  Deceleration.psd  Enhanced_Features_Summary.md  Enhanced_Features_Summary_Full.md  ICAO_Comparison_Summary.md  ICAO_Phraseology_Improvements.md  LICENSE_metaf  LICENSE_xplanemp.txt  LICENSE_zlib.txt  LiveTraffic.doxygen  LiveTraffic.doxygen.bak  Log_HoursOfExecution_For_Analysis.txt  MacOSX-Framework64Lib  MainPage.md  Notes.txt  SyntheticTraffic.md  TestScript_Sound.txt  index.md  readme.html
xplanemp/: XPMPMultiplayer.h  XPMPPlaneRenderer.h
(+57 files in other folders)
